# memory-v2

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: basic_usage.py  claude_code_config.json  claude_desktop_config.json
src/memory_v2/: __init__.py  build_kg.py  cli.py  compaction.py  db.py  embeddings.py  extraction.py  knowledge_graph.py  multi_agent.py  scoring.py  security.py  server.py  vault_indexer.py
tests/: conftest.py  test_db.py  test_scoring.py  test_security.py
